# Agent-GCPtoolkit

./: .gitignore  CHANGELOG.md  README.md  multi_secret_workflow.py  pyproject.toml  test_python_integration.py
agent_gcptoolkit/: secrets.py
agent_gcptoolkit/cli/: main.py
agent_gcptoolkit/secrets/domains/: config_loader.py  gcp_client.py  preferences.py
backend/services/secrets/src/domains/: gcp_client.py
backend/services/secrets/src/workflows/: secret_operations.py
frontend/cli/: main.py
scripts/: install-global.sh  install.sh
tests/: test_config_management.py  test_integration.sh
