[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-gcptoolkit"
version = "0.1.0"
description = "GCP toolkit for agent operations"
requires-python = ">=3.10"
dependencies = [
    "google-cloud-secret-manager",
    "pyyaml",
]

[project.scripts]
gcptoolkit = "agent_gcptoolkit.cli.main:main"

[tool.setuptools]
packages = [
    "agent_gcptoolkit",
    "agent_gcptoolkit.cli",
    "agent_gcptoolkit.secrets",
    "agent_gcptoolkit.secrets.domains",
    "agent_gcptoolkit.secrets.workflows",
]
